--- a/in4labs_IoT_app/templates/base.html
+++ b/in4labs_IoT_app/templates/base.html
@@ -43,7 +43,7 @@
         </div>
 
         <div class="page-title">
-            <span class="is-hidden-xs">DIEEC - Development Environment</span>
+            <span class="is-hidden-xs">In4Labs - <strong>IoT Lab</strong></span>
         </div>
         <div class="log-header">
             <div align="right">
