Add circuit diagram

--- a/in4labs_IoT_app/templates/index.html
+++ b/in4labs_IoT_app/templates/index.html
@@ -3,34 +3,45 @@
 {% block content %}
     <section>
         <div class="main-container">
-            <div class="editor">
-                <div class="editor-nav">
-                    <div class="row">
-                        <nav>
-                            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                                {% for navtab in navtabs %}
-                                    {{ navtab | safe }}
-                                {% endfor %}
-                            </div>
-                        </nav>
-                    </div>
-                    <div class="tab-content" id="nav-tabContent">
-                        {% for editor in editors %}
-                            {{ editor | safe }}
-                        {% endfor %}   
+            <div class="row">      
+                <div class="col" id="editor">
+                    <div class="editor-nav">
+                        <div class="row">
+                            <nav>
+                                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                                    {% for navtab in navtabs %}
+                                        {{ navtab | safe }}
+                                    {% endfor %}
+                                </div>
+                            </nav>
+                        </div>
+                        <div class="tab-content" id="nav-tabContent">
+                            {% for editor in editors %}
+                                {{ editor | safe }}
+                            {% endfor %}   
+                        </div>
                     </div>
                 </div>
+                <div class="col camera" id="camera">
+                    <iframe id="cam"
+                            src="{{ cam_url }}"
+                            allowfullscreen="allowfullscreen"
+                            mozallowfullscreen="mozallowfullscreen"
+                            webkitallowfullscreen="webkitallowfullscreen"
+                            width="600">
+                    </iframe>
+                </div>
             </div>
-
-            
-            <div class="camera" id="camera">
-                <iframe id="cam"
-                        src="{{ cam_url }}"
-                        allowfullscreen="allowfullscreen"
-                        mozallowfullscreen="mozallowfullscreen"
-                        webkitallowfullscreen="webkitallowfullscreen"
-                        width="650">
-                </iframe>
+            <br>
+            <div class="row justify-content-center">
+                <div class="col-10">
+                    <div class="card" style="background: #00979C; color: white;">
+                        <div class="card-body">
+                          <h3><u>Circuit diagram</u></h3>
+                        </div>
+                        <img src="{{ url_for('static', filename='img/circuit_diagram.jpg') }}" class="img img-fluid m-2" alt="Circuit diagram">
+                    </div>
+                </div>
             </div>
         </div>
         <div class="timer">
