--- a/in4labs_IoT_app/static/css/editor.css
+++ b/in4labs_IoT_app/static/css/editor.css
@@ -16,8 +16,7 @@
     width: 100%;
     background: #00979C;
     padding: 6px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
+    border-radius: 4px;
 }
 .camera {
     width: 650px;
