Fix variable size of editor

--- a/in4labs_IoT_app/templates/index.html
+++ b/in4labs_IoT_app/templates/index.html
@@ -4,7 +4,7 @@
     <section>
         <div class="main-container">
             <div class="row">      
-                <div class="col" id="editor">
+                <div class="editor" id="editor">
                     <div class="editor-nav">
                         <div class="row">
                             <nav>
@@ -22,13 +22,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col camera" id="camera">
+                <div class="camera" id="camera">
                     <iframe id="cam"
                             src="{{ cam_url }}"
                             allowfullscreen="allowfullscreen"
                             mozallowfullscreen="mozallowfullscreen"
                             webkitallowfullscreen="webkitallowfullscreen"
-                            width="600">
+                            width="560">
                     </iframe>
                 </div>
             </div>
