--- a/in4labs_IoT_app/templates/base.html
+++ b/in4labs_IoT_app/templates/base.html
@@ -73,6 +73,36 @@
             <div class="modal-content">
                 <div class="modal-body">
                     <p id="modal-msg"></p>
+                    <div id="modal-setup-monitor" style="display: none;">
+                        <div class="form-group">
+                            <label for="baudrate-select">Baud Rate:</label>
+                            <select class="form-control" id="baudrate-select">
+                                <option value="300">300</option>
+                                <option value="1200">1200</option>
+                                <option value="2400">2400</option>
+                                <option value="4800">4800</option>
+                                <option value="9600" selected = "selected">9600</option>
+                                <option value="14400">14400</option>
+                                <option value="19200">19200</option>
+                                <option value="28800">28800</option>
+                                <option value="38400">38400</option>
+                                <option value="57600">57600</option>
+                                <option value="115200">115200</option>
+                            </select>
+                        </div>
+                        <div class="form-group" style="padding-top: 5px;">
+                            <label for="seconds-select">Seconds:</label>
+                            <select class="form-control" id="seconds-select">
+                                <option value="5">5</option>
+                                <option value="10" selected = "selected">10</option>
+                                <option value="20">20</option>
+                                <option value="30">30</option>
+                                <option value="40">40</option>
+                                <option value="50">50</option>
+                                <option value="60">60</option>
+                            </select>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
