--- a/in4labs_IoT_app/templates/login.html
+++ b/in4labs_IoT_app/templates/login.html
@@ -6,7 +6,7 @@
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="mb-3">
-                <label for="email" class="form-label">Email address</label>
+                <label for="email" class="form-label">Please, enter your e-mail to verify your identity:</label>
                 <input type="email" name="email" class="form-control" id="email">
             </div>
         </div>
