--- a/in4labs_IoT_app/templates/base.html
+++ b/in4labs_IoT_app/templates/base.html
@@ -59,9 +59,9 @@
     <main>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
-                <ul class="alert alert-success">
+                <ul class="alert alert-danger">
                 {% for message in messages %}
-                <li>{{ message }}</li>
+                    <li>{{ message }}</li>
                 {% endfor %}
                 </ul>
             {% endif %}
