Change modal to have variable size

--- a/in4labs_IoT_app/templates/base.html
+++ b/in4labs_IoT_app/templates/base.html
@@ -67,7 +67,7 @@
         {% block content %}{% endblock %}
     </main>
     <div class="modal fade" tabindex="-1" role="dialog" id="modal_message" aria-labelledby="modal-message" aria-hidden="true">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog" id="modal_dialog" role="document">
             <div class="modal-content">
                 <div class="modal-body">
                     <p id="modal-msg"></p>
