Add reset lab functionality

--- a/in4labs_IoT_app/templates/base.html
+++ b/in4labs_IoT_app/templates/base.html
@@ -49,6 +49,9 @@
                 <div >
                     <p><strong>Log in as</strong>: {{current_user.email}}</p>
                 </div>
+                <div>
+                    <button class="btn btn-danger" onclick="onResetLab()">Reset Lab</button>
+                </div>
             {% endif %}
             </div>
         </div>
